apps/base/home-assistant/service.yaml
# apps/base/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8123
  selector:
    app.kubernetes.io/name: homeassistant
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-discovery
spec:
  ports:
    - name: discovery
      port: 5683
      targetPort: 5683
      protocol: UDP
  selector:
    app.kubernetes.io/name: homeassistant
  type: LoadBalancer
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-ssh
spec:
  ports:
    - name: ssh
      port: 22
      targetPort: 2222
  selector:
    app.kubernetes.io/name: homeassistant
  type: LoadBalancer
  externalTrafficPolicy: Local
