apps/base/home-assistant/ingressroute.yaml
# apps/base/home-assistant/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`fix-me.example.com`)"
      kind: Rule
      services:
        - name: homeassistant
          port: 80
  tls: {}
